@startuml

title __SRC's Class Diagram__\n

  namespace  {
    interface Camera {
        {abstract} + toString()
    }
  }
  

  namespace  {
    interface Display {
        {abstract} + toString()
    }
  }
  

  namespace  {
    class Iphone {
        + getDescription()
        ~ Iphone()
    }
  }
  

  namespace  {
    class IphoneCamera {
        + toString()
    }
  }
  

  namespace  {
    class IphoneDetailsFactory {
        + createCamera()
        + createDisplay()
        + createProcessor()
        + createSecurity()
    }
  }
  

  namespace  {
    class IphoneDisplay {
        + toString()
    }
  }
  

  namespace  {
    class IphoneFactory {
        + createPhone()
    }
  }
  

  namespace  {
    class IphoneProcessor {
        + toString()
    }
  }
  

  namespace  {
    class IphoneSecurity {
        + toString()
    }
  }
  

  namespace  {
    abstract class Phone {
        {abstract} + getDescription()
        + toString()
    }
  }
  

  namespace  {
    interface PhoneDetailsFactory {
        {abstract} + createCamera()
        {abstract} + createDisplay()
        {abstract} + createProcessor()
        {abstract} + createSecurity()
    }
  }
  

  namespace  {
    interface PhoneFactory {
        {abstract} + createPhone()
    }
  }
  

  namespace  {
    interface Processor {
        {abstract} + toString()
    }
  }
  

  namespace  {
    class Samsung {
        + getDescription()
        ~ Samsung()
    }
  }
  

  namespace  {
    class SamsungCamera {
        + toString()
    }
  }
  

  namespace  {
    class SamsungDetailsFactory {
        + createCamera()
        + createDisplay()
        + createProcessor()
        + createSecurity()
    }
  }
  

  namespace  {
    class SamsungDisplay {
        + toString()
    }
  }
  

  namespace  {
    class SamsungFactory {
        + createPhone()
    }
  }
  

  namespace  {
    class SamsungProcessor {
        + toString()
    }
  }
  

  namespace  {
    class SamsungSecurity {
        + toString()
    }
  }
  

  namespace  {
    interface Security {
        {abstract} + toString()
    }
  }
  

  namespace  {
    class TestDrive {
        {static} + main()
    }
  }
  

  Iphone -up-|> Phone
  IphoneCamera .up.|> Camera
  IphoneDetailsFactory .up.|> PhoneDetailsFactory
  IphoneDisplay .up.|> Display
  IphoneFactory .up.|> PhoneFactory
  IphoneProcessor .up.|> Processor
  IphoneSecurity .up.|> Security
  Phone o-- Camera : camera
  Phone o-- Display : display
  Phone o-- Processor : processor
  Phone o-- Security : security
  Samsung -up-|> Phone
  SamsungCamera .up.|> Camera
  SamsungDetailsFactory .up.|> PhoneDetailsFactory
  SamsungDisplay .up.|> Display
  SamsungFactory .up.|> PhoneFactory
  SamsungProcessor .up.|> Processor
  SamsungSecurity .up.|> Security


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
